# cs3110-fp

./: .gitignore  INSTALL.txt  Makefile  README.md  card_crusaders_solitaire.yaml  dune-project  fp.opam  gitlog.txt
_build/: .db  .digest-db  log
_build/default/: fp.dune-package  fp.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: fp.cma  fp.cmxa  fp.cmxs
_build/default/lib/.fp.objs/byte/: fp.cmi  fp.cmo  fp.cmt
_build/default/lib/.fp.objs/native/: fp.cmx
_build/default/lib/.merlin-conf/: lib-fp
_build/default/test/.merlin-conf/: exe-test_fp
_build/default/test/.test_fp.eobjs/byte/: dune__exe__Test_fp.cmi  dune__exe__Test_fp.cmti
_build/default/test/.test_fp.eobjs/native/: dune__exe__Test_fp.cmx
_build/install/default/lib/fp/: META  dune-package  opam
data/: card.txt  help.txt  rules.txt  themes.txt
lib/: card.ml  card.mli  dune  foundation.ml  foundation.mli  game.ml  game.mli  printer.ml  printer.mli  stockwaste.ml  stockwaste.mli  tableau.ml  tableau.mli  theme.ml  theme.mli
test/: dune  test_card.ml  test_foundation.ml  test_fp.ml  test_game.ml  test_stockwaste.ml  test_tableau.ml
