(lang dune 3.14)

(name fp)

(generate_opam_files true)

(source
 (github "yb272/cs3110-final-project"))

(authors
 "Malli Gutta(mg2395), Desmond Ababio(dna35), Yinghui Bimali(yb272), Aruni Chenxi(ac2552)")

(maintainers "None")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fp)
 (synopsis "Solitare")
 (description "Draw 3 and Draw 1 Solitare")
 (depends ocaml dune)
 (tags
  (topics "" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
